--- a/dj.html
+++ b/dj.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="theme-color" content="#000000">
     <title>Light Show</title>
     <link rel="manifest" href="dj-manifest.webmanifest">
 </head>
@@ -759,10 +760,11 @@
 
     #refresh{
         position: absolute;
-        left: 1vw;
-        bottom: 20vh;
-        width: 8vw;
-        height: 8vh;
+        left: 0.5vw;
+        /* margin: 0.5vw; */
+        bottom: calc(10vh + 1vw);
+        width: 9.25vw;
+        height: 10vh;
         border-radius: 0.5vw;
         font-size: 3vh;
         text-align: center;
@@ -778,10 +780,11 @@
 
     #laser-mode{
         position: absolute;
-        left: 10.5vw;
-        bottom: 20vh;
-        width: 8vw;
-        height: 8vh;
+        left: 10.25vw;
+        /* margin: 0.5vw; */
+        bottom: calc(10vh + 1vw);
+        width: 9.25vw;
+        height: 10vh;
         border-radius: 0.5vw;
         font-size: 3vh;
         text-align: center;
@@ -794,10 +797,10 @@
 
     #clear{
         position: absolute;
-        left: 1vw;
-        bottom: 10vh;
-        width: 8vw;
-        height: 8vh;
+        left: 0.5vw;
+        bottom: 0.5vw;
+        width: 9.25vw;
+        height: 10vh;
         border-radius: 0.5vw;
         font-size: 3vh;
         text-align: center;
@@ -813,10 +816,10 @@
 
     #dev-mode{
         position: absolute;
-        left: 10.5vw;
-        bottom: 10vh;
-        width: 8vw;
-        height: 8vh;
+        left: 10.25vw;
+        bottom: 0.5vw;
+        width: 9.25vw;
+        height: 10vh;
         border-radius: 0.5vw;
         font-size: 3vh;
         text-align: center;
