no admin + filter out songs

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
     console.log("----UUID----")
     console.log(uuid);
 
-    var admin = false;
+    var admin = true;
 
     const windowWidth = window.innerWidth;
     const windowHeight = window.innerHeight;
