--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 
 </body>
 
-<script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js">
+
     // https://stackoverflow.com/questions/32963400/android-keyboard-shrinking-the-viewport-and-elements-using-unit-vh-in-css
     // var viewport = document.querySelector("meta[name=viewport]");
     // viewport.setAttribute("content", viewport.content + ", height=" + window.innerHeight);
@@ -607,8 +608,22 @@
         
     };
 
+
+
     if (navigator.userAgent.includes('Mobi')) {
-        seekInputElem.addEventListener('touchstart', sliderStart, { passive: true });
+        // seekInputElem.addEventListener('touchstart', sliderStart, { passive: true });
+
+        // Next, create a new Hammer instance for the element
+        var seekInputElem = document.querySelector('.seek-input');
+        var hammer = new Hammer(seekInputElem);
+
+        // Now you can add a 'pan' event listener to the hammer instance
+        hammer.on('pan', function(event) {
+            // this will fire when the user moves their finger on the element
+            // you can use event.deltaX and event.deltaY to get the distance moved
+            sliderStart(event);
+        });
+
         seekInputElem.addEventListener('touchend', sliderStop, { passive: true });
     }
     else {
