--- a/dj.html
+++ b/dj.html
@@ -721,6 +721,7 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
+        z-index: 0; 
         opacity: 0;
         transform: scale(0.9);
         animation-duration: 200ms;
@@ -772,15 +773,15 @@
     }
 
     @keyframes prev-table-deactivate{
-        0% {opacity: 1; transform: scale(1)}
-        50% {opacity: 0; transform: scale(0.9)}
-        100% {opacity: 0; transform: scale(0.9)}
+        0% {z-index: 2; opacity: 1; transform: scale(1)}
+        50% {z-index: 1; opacity: 0; transform: scale(0.9)}
+        100% {z-index: 1; opacity: 0; transform: scale(0.9)}
     }
 
     @keyframes curr-table-activate{
-        0% {opacity: 0; transform: scale(0.9)}
-        50% {opacity: 0; transform: scale(0.9)}
-        100% {opacity: 1; transform: scale(1)}
+        0% {z-index: 1; opacity: 0; transform: scale(0.9)}
+        50% {z-index: 2; opacity: 0; transform: scale(0.9)}
+        100% {z-index: 2; opacity: 1; transform: scale(1)}
     }
 
     @keyframes prev-table-up{
