--- a/dj.html
+++ b/dj.html
@@ -617,7 +617,7 @@
 
         console.log(width);
 
-        let size = Math.min(width, height) * 0.2;
+        let size = height * 0.2;
         let bokehColor = [
             [150, 100, 30],
             [180, 100, 30],
