--- a/dj.html
+++ b/dj.html
@@ -454,7 +454,13 @@
     var profileOrder = {
         'Andrew': 0,
         'Eric': 1,
+        'Emma': 2,
+        'Twinkle': 3,
+        'winamp_good': 4,
         'Colors': 10,
+        'winamp_all': 14,
+        'winamp_tests': 15,
+        'Shows': 16,        
         'Autogen effects': 99999,
         'Generated Shows': 100000,
     }
