--- a/dj.html
+++ b/dj.html
@@ -455,10 +455,11 @@
         'Andrew': 0,
         'Eric': 1,
         'Emma': 2,
-        'Twinkle': 3,
-        'winamp_good': 4,
+        'Fun Grid': 3,
+        'Winamp Alone': 4,
+        'Winamp Good 2': 5,
         'Colors': 10,
-        'winamp_all': 14,
+        'winamp_good_1': 14,
         'winamp_tests': 15,
         'Shows': 16,        
         'Autogen effects': 99999,
