--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     function socketInit() {
         console.log("socket init");
         
-        socket = new WebSocket("ws://" + location.hostname + ":7654");
+        socket = new WebSocket("wss://" + location.hostname + ":7654");
 
         socket.onopen = function () {
             // sometimes takes a long time to get here
